--- a/user/index.html
+++ b/user/index.html
@@ -196,7 +196,7 @@
                         <span class="menu-title">Transactions</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#profile" class="nav-link">
+                    <a href="profile.html" class="nav-link">
                         <img src="../assets/user/image/icon/8.png" alt="Account Setting">
                         <span class="menu-title">Account Setting</span></a>
                 </li>
