--- a/user/profile.html
+++ b/user/profile.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="csrf-token" content="TIHgKf3jf9Am2po0eO2Nk5yHhTigbuTUVGLNgmhA">
 
-    <title>Dashboard</title>
+    <title>Profile</title>
     <link rel="stylesheet" href="../assets/css/simple-line-icons.css">
     
     <link rel="stylesheet" href="../assets/user/font-awesome-4.7.0/css/font-awesome.min.css" />
