--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- responsive -->
     <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/css/pages/home.css">
 </head>
 
 <body> 
@@ -106,17 +107,7 @@
     <!-- banner begin-->
     <div class="banner">
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-xl-8 col-lg-8">
-                    <div class="banner-content">
-                        <h1>IntellIgent Plan for your money</h1>
-                        <p>Put your investing ideas into action with full range of investments.<br/>
-                        Enjoy real benefits and rewards on your accrue investing.</p>
-                        <a href="#">Start Now</a>
-                        <a href="#">View Plan</a>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </div>
     <!-- banner end -->
@@ -125,111 +116,130 @@
     <div class="info-feature">
         <div class="container">
             <div class="row">
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="info-single-feature">
-                        <div class="part-icon">
-                            <i class="flaticon-group"></i>
-                        </div>
-                        <div class="part-text">
-                            <h2>50,236</h2>
-                            <h3>Total Members</h3>
-                            <p>We bring the right people together to
-                                challenge established thinking and
-                                drive transformation. We will show the
-                                way to successive.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="info-single-feature">
-                        <div class="part-icon">
-                            <i class="flaticon-money"></i>
-                        </div>
-                        <div class="part-text">
-                            <h2>5,020.360</h2>
-                            <h3>Total Deposited</h3>
-                            <p>We bring the right people together to
-                                challenge established thinking and
-                                drive transformation. We will show the
-                                way to successive.</p>
+                <div class="col-xl-4 col-lg-4 col-md-4">
+                    <div class=""> 
+                        <img src="assets/img/total.png">                       
+                        <div class="item">
+                            <div class="number">
+                                <span>1</span>
+                                <span>2</span>
+                                <span>3</span>
+                                <span>4</span>
+                                <span>5</span>
+                            </div>
+                            <h3 class="title">TOTAL<br>MEMBERS</h3>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="info-single-feature">
-                        <div class="part-icon">
-                            <i class="flaticon-hand"></i>
-                        </div>
-                        <div class="part-text">
-                            <h2>1,030.136</h2>
-                            <h3>Total Profits</h3>
-                            <p>We bring the right people together to
-                                challenge established thinking and
-                                drive transformation. We will show the
-                                way to successive.</p>
+                <div class="col-xl-4 col-lg-4 col-md-4">
+                    <div class=""> 
+                        <img src="assets/img/total.png">                       
+                        <div class="item">
+                            <div class="number">
+                                <span>1</span>
+                                <span>2</span>
+                                <span>3</span>
+                                <span>4</span>
+                                <span>5</span>
+                            </div>
+                            <h3 class="title">TOTAL<br>DEPOSITED</h3>
                         </div>
                     </div>
                 </div>
+
+                <div class="col-xl-4 col-lg-4 col-md-4">
+                    <div class=""> 
+                        <img src="assets/img/total.png">                       
+                        <div class="item">
+                            <div class="number">
+                                <span>1</span>
+                                <span>2</span>
+                                <span>3</span>
+                                <span>4</span>
+                                <span>5</span>
+                            </div>
+                            <h3 class="title">TOTAL<br>PROFIT</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+
             </div>
         </div>
     </div>
     <!-- info feature end -->
-
+    <style>
+        ._center .part-icon{
+            margin: 0 auto;
+        }
+        ._center .part-text{
+            text-align: center;
+        }
+    </style>
     <!-- litehyip features begin-->
     <div class="litehyip-features">
         <div class="bg-img">
-            <img src="assets/img/litehyip-feature-bg.png" alt="">
+            <img src="assets/img/Banner.jpg" alt="">
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-xl-6 col-lg-6 col-md-8">
+                <div class="col-xl-12 col-lg-6 col-md-8">
                     <div class="section-title">
-                        <h2>Lite<span>HYIP</span> Features</h2>
-                        <p>Put your investing ideas into action with full range of investments.
-                        Enjoy real benefits and rewards on your accrue investing.</p>
+                        <h2 style="text-align: center;">Lite<span>HYIP</span> Features</h2>
                     </div>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single-feature">
+                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="single-feature _center">
                         <div class="part-icon">
                             <i class="flaticon-brain"></i>
                         </div>
                         <div class="part-text">
-                            <h3>We Innovate</h3>
-                            <p>We innovate systematically, continuously and
-                            successfully innovate systematically,
-                            continuously</p>
+                            <h3>Interface is Understandable and User-friendly</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single-feature">
+                <div class="col-xl-2 col-lg-4 col-md-6">
+                    <div class="single-feature _center">
                         <div class="part-icon">
                             <i class="flaticon-patent"></i>
                         </div>
                         <div class="part-text">
-                            <h3>Licenced & Certified</h3>
-                            <p>We innovate systematically, continuously and
-                                successfully innovate systematically,
-                                continuously</p>
+                            <h3>Instant Withdraw</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single-feature">
+                <div class="col-xl-2 col-lg-4 col-md-6 ">
+                    <div class="single-feature _center">
                         <div class="part-icon">
                             <i class="flaticon-donation"></i>
                         </div>
                         <div class="part-text">
-                            <h3>Saving & Investments</h3>
-                            <p>We innovate systematically, continuously and
-                                successfully innovate systematically,
-                                continuously</p>
+                            <h3>High Security</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2 col-lg-4 col-md-6 ">
+                    <div class="single-feature _center">
+                        <div class="part-icon">
+                            <i class="flaticon-patent"></i>
+                        </div>
+                        <div class="part-text">
+                            <h3>Transoarent Infromation</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6 ">
+                    <div class="single-feature _center">
+                        <div class="part-icon">
+                            <i class="flaticon-donation"></i>
+                        </div>
+                        <div class="part-text">
+                            <h3>24/24 Support</h3>
                         </div>
                     </div>
                 </div>
@@ -265,7 +275,7 @@
     <!-- inventor begin-->
     <div class="inventor">
         <div class="bg-img">
-            <img src="assets/img/ventor-bg.png" alt="">
+            <img src="assets/img/our_top_investor.jpg" alt="">
         </div>
         <div class="container">
             <div class="row d-flex">
@@ -401,7 +411,7 @@
     <!-- newsletter begin-->
     <div class="newsletter">
         <div class="bg-img">
-            <img src="assets/img/newsletter-bg.png" alt="">
+            <img src="assets/img/join_with _us.jpg" alt="">
         </div>
         <div class="container">
             <div class="row justify-content-center">
