page home mobile 80%

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="row d-flex">
                         <div class="col-xl-12 col-lg-12 col-6 d-flex align-items-center">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo.png" alt=""></a>
+                                <a href="index.html"><img src="assets/img/LOGO_BEEWAY.png" alt=""></a>
                             </div>
                         </div>
                         <div class="col-xl-12 col-6 d-xl-none d-lg-none d-block">
@@ -94,8 +94,9 @@
                 </div>
 
                 <div class="col-xl-2 col-lg-2 d-xl-flex d-lg-flex d-none align-items-center">
-                    <div class="login">
-                        <a href="login.html">login</a>
+                    <div>
+                        <a class="btn btn-login" href="login.html">login</a>
+                        <a class="btn btn-register" href="register.html">register</a>
                     </div>
                 </div>
             </div>
@@ -116,7 +117,7 @@
     <div class="info-feature">
         <div class="container">
             <div class="row">
-                <div class="col-xl-4 col-lg-4 col-md-4">
+                <div class="col-xl-4 col-lg-4 col-md-4 item-total">
                     <div class=""> 
                         <img src="assets/img/total.png">                       
                         <div class="item">
@@ -132,7 +133,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-4 col-lg-4 col-md-4">
+                <div class="col-xl-4 col-lg-4 col-md-4 item-total">
                     <div class=""> 
                         <img src="assets/img/total.png">                       
                         <div class="item">
@@ -148,7 +149,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-4 col-lg-4 col-md-4">
+                <div class="col-xl-4 col-lg-4 col-md-4 item-total">
                     <div class=""> 
                         <img src="assets/img/total.png">                       
                         <div class="item">
@@ -165,7 +166,64 @@
                 </div>
             </div>
             <div class="row">
-
+                <div class="item-title">
+                    <hr>
+                    <h2 class="title">INVESTMENT</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-6 plan">
+                    <div class=""> 
+                        <img src="assets/img/plan/1.png">                       
+                    </div>
+                </div>
+                <div class="col-xl-6 plan">
+                    <div class=""> 
+                        <img src="assets/img/plan/2.png">                         
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-6 plan">
+                    <div class=""> 
+                        <img src="assets/img/plan/3.png">                       
+                    </div>
+                </div>
+                <div class="col-xl-6 plan">
+                    <div class=""> 
+                        <img src="assets/img/plan/4.png">                         
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-6 plan">
+                    <div class=""> 
+                        <img src="assets/img/plan/5.png">                       
+                    </div>
+                </div>
+                <div class="col-xl-6 plan">
+                    <div class=""> 
+                        <img src="assets/img/plan/6.png">                         
+                    </div>
+                </div>
+            </div>
+            <div class="row" style="margin-top: 25px;margin-bottom: 10px;">
+                <div class="item-title">
+                    <hr>
+                    <h2 class="title" style="width:50%;">SMART INVESTMENT PACKAGES</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-12 item-sip">
+                    <div class=""> 
+                        <img src="assets/img/SIP/1.png">                       
+                    </div>
+                </div>
+                <div class="col-xl-12 item-sip">
+                    <div class=""> 
+                        <img src="assets/img/SIP/2.png">                       
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -181,13 +239,13 @@
     <!-- litehyip features begin-->
     <div class="litehyip-features">
         <div class="bg-img">
-            <img src="assets/img/Banner.jpg" alt="">
+            <img src="assets/img/banner-bg.png" alt="">
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-xl-12 col-lg-6 col-md-8">
                     <div class="section-title">
-                        <h2 style="text-align: center;">Lite<span>HYIP</span> Features</h2>
+                        <h2 style="text-align: center; color:white;">Features of Beeway.io</h2>
                     </div>
                 </div>
             </div>
@@ -195,8 +253,8 @@
             <div class="row">
                 <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="single-feature _center">
-                        <div class="part-icon">
-                            <i class="flaticon-brain"></i>
+                        <div class="part_icon">
+                            <img src="assets/img/home/Interface.png">
                         </div>
                         <div class="part-text">
                             <h3>Interface is Understandable and User-friendly</h3>
@@ -205,8 +263,8 @@
                 </div>
                 <div class="col-xl-2 col-lg-4 col-md-6">
                     <div class="single-feature _center">
-                        <div class="part-icon">
-                            <i class="flaticon-patent"></i>
+                        <div class="part_icon">
+                                <img src="assets/img/home/Withdraw.png">
                         </div>
                         <div class="part-text">
                             <h3>Instant Withdraw</h3>
@@ -215,8 +273,8 @@
                 </div>
                 <div class="col-xl-2 col-lg-4 col-md-6 ">
                     <div class="single-feature _center">
-                        <div class="part-icon">
-                            <i class="flaticon-donation"></i>
+                        <div class="part_icon">
+                                <img src="assets/img/home/High_security.png">
                         </div>
                         <div class="part-text">
                             <h3>High Security</h3>
@@ -225,8 +283,8 @@
                 </div>
                 <div class="col-xl-2 col-lg-4 col-md-6 ">
                     <div class="single-feature _center">
-                        <div class="part-icon">
-                            <i class="flaticon-patent"></i>
+                        <div class="part_icon">
+                                <img src="assets/img/home/Transparent.png">
                         </div>
                         <div class="part-text">
                             <h3>Transoarent Infromation</h3>
@@ -235,8 +293,8 @@
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 ">
                     <div class="single-feature _center">
-                        <div class="part-icon">
-                            <i class="flaticon-donation"></i>
+                        <div class="part_icon">
+                                <img src="assets/img/home/24.24.png">
                         </div>
                         <div class="part-text">
                             <h3>24/24 Support</h3>
@@ -254,7 +312,7 @@
             <div class="row justify-content-around d-flex">
                 <div class="col-xl-6 col-lg-6">
                     <div class="part-img">
-                        <img src="assets/img/we-thinking-bg.jpg" alt="">
+                        <img src="assets/img/home/Picute.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 d-flex align-items-center">
@@ -273,38 +331,15 @@
     <!-- we thinking global end -->
 
     <!-- inventor begin-->
-    <div class="inventor">
+    <div class="litehyip-features">
         <div class="bg-img">
             <img src="assets/img/our_top_investor.jpg" alt="">
         </div>
         <div class="container">
-            <div class="row d-flex">
-                <div class="col-xl-5 col-lg-6 d-flex align-items-center">
-                    <div class="part-text">
-                        <h2>Our Top <span>Inventors</span> </h2>
-                        <p>Put your investing ideas into action with full range of
-                        investments. Enjoy real benefits and rewards on your
-                        accrue investing. prefer a hands-off approach to investing
-                        a financial advisor, the choice is yours.</p>
-                    </div>
-                </div>
-                <div class="col-xl-5 col-lg-5 offset-xl-1">
-                    <div class="part-inventor">
-                        <div class="single-inventor">
-                            <img src="assets/img/inventor-1.png" alt="">
-                        </div>
-                        <div class="single-inventor">
-                            <img src="assets/img/inventor-2.png" alt="">
-                        </div>
-                        <div class="single-inventor">
-                            <img src="assets/img/inventor-3.png" alt="">
-                        </div>
-                        <div class="single-inventor">
-                            <img src="assets/img/inventor-4.png" alt="">
-                        </div>
-                        <div class="single-inventor">
-                            <img src="assets/img/inventor-5.png" alt="">
-                        </div>
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="section-title">
+                        <h2 style="text-align: center; color:white; padding: 50px 0px;">Our Top <span>Investor</span></h2>
                     </div>
                 </div>
             </div>
