--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <!-- litehyip features begin-->
     <div class="litehyip-features">
         <div class="bg-img">
-            <img src="assets/img/banner-bg.png" alt="">
+            <img src="assets/img/Background_Feature.jpg" alt="">
         </div>
         <div class="container">
             <div class="row">
