hoan thanh trang home

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> LiteHYIP – HYIP Investment HTML Template </title>
+    <title>Beeway</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/img/LOGO_BEEWAY.png" type="image/x-icon">
     <!-- bootstrap -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- fontawesome icon  -->
@@ -46,14 +46,18 @@
                     <div class="row d-flex">
                         <div class="col-xl-12 col-lg-12 col-6 d-flex align-items-center">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/LOGO_BEEWAY.png" alt=""></a>
+                                <a href="index.html"><img class="mobile_logo" src="assets/img/LOGO_BEEWAY.png" alt=""></a>
                             </div>
                         </div>
-                        <div class="col-xl-12 col-6 d-xl-none d-lg-none d-block">
+                        <div class="col-xl-12 col-6 d-xl-none d-lg-none d-block" style="padding: 0px;">
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                                 aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
                             </button>
+                            <div class="btn_item">
+                                <a href="login.html" class="btn_mobile login_mobile" style="color:white;">Login</a>
+                                <a href="register.html" class="btn_mobile register_mobile" style="color:white;">Register</a>
+                            </div>
                         </div>
                     </div>
                 </div>
