them hinh, sua cac trang con lai

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
             <div class="row">
                 <div class="col-xl-5 col-lg-5 col-md-6">
                     <div class="about-area">
-                        <a href="index.html"><img src="assets/img/logo.png" alt=""></a>
+                        <a href="index.html"><img src="assets/img/LOGO_BEEWAY.png" alt=""></a>
                         <p>We are full service Digital Marketing Agency all tools
                         you need inbound success. With this module theres
                         no need to go another day.</p>
@@ -539,10 +539,10 @@
                                 Charls Town
                             </li>
                             <li>
-                                info@example.com
+                                contact@beeway.io
                             </li>
                             <li>
-                                877-559-9826
+                                Organization:&nbsp;Beeway Co.,Limited
                             </li>
                         </ul>
                     </div>
