--- a/user/deposit.html
+++ b/user/deposit.html
@@ -241,6 +241,24 @@
         </div>
     </div>
     <div class="row">
+        <div class="col-12 grid-margin">
+            <div class="card">
+                <div class="card-body">
+                    <p for="amount"><i>1. To open a Deposit, transfer the specified amount to the ETH address listed below or simply click on the link</i></p>
+                    <div class="row pm_method">
+                        <input class="amount_to_withdrawal" type="text" name="name" value="" style="border:2px dashed #4CAF50;background: #e8dede;">
+                    </div>
+                </div>
+                <div class="card-body">
+                    <p for="amount" style="text-align: center;">Copy Address or Scan QR Code</p>
+                    <div class="row pm_method">
+                        <img class="img_qr" src="../assets/img/qr.jpeg">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-md-12">
             <div class="card">
                 <div class="card-body">
